--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "run.js",
   "dependencies": {
+    "cron": "^1.8.2",
     "fb": "^2.0.0",
+    "fs-tail-stream": "^1.1.0",
     "moment": "^2.24.0",
     "puppeteer": "^2.1.1"
   },
